--- a/book.bib
+++ b/book.bib
@@ -8,3 +8,189 @@
   note = {ISBN 978-1498716963},
   url = {http://yihui.name/knitr/},
 }
+
+@article{miyakawa2020,
+  title={No raw data, no science: another possible source of the reproducibility crisis.},
+  author={Miyakawa, T.},
+  journal={Mol Brain},
+  volume={13},
+  number={24},
+  year={2020},
+  url = {https://doi.org/10.1186/s13041-020-0552-2}
+}
+
+
+@article{baker2016,
+  title={1500 scientists lift the lid on reproducibility},
+  author={Baker, M.},
+  journal={Nature},
+  volume={533},
+  year={2016},
+  url = {https://doi.org/10.1038/533452a}
+}
+
+
+@article{cos2015,
+  title={Estimating the reproducibility of psychological science},
+  author={Nosek},
+  journal={Science},
+  volume={349},
+  issue={6251},
+  year={2015},
+  url = {http://doi.org/10.1126/science.aac4716}
+}
+
+
+
+@article{simmons2011false,
+  title={False-positive psychology: Undisclosed flexibility in data collection and analysis allows presenting anything as significant},
+  author={Simmons, Joseph P and Nelson, Leif D and Simonsohn, Uri},
+  journal={Psychological science},
+  volume={22},
+  number={11},
+  pages={1359--1366},
+  year={2011},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{mcclelland2015median,
+  title={Median splits, Type II errors, and false--positive consumer psychology: Don't fight the power},
+  author={McClelland, Gary H and Lynch Jr, John G and Irwin, Julie R and Spiller, Stephen A and Fitzsimons, Gavan J},
+  journal={Journal of Consumer Psychology},
+  volume={25},
+  number={4},
+  pages={679--689},
+  year={2015},
+  publisher={Elsevier}
+  }
+
+@article{benjamin2018redefine,
+  title={Redefine statistical significance},
+  author={Benjamin, Daniel J and Berger, James O and Johannesson, Magnus and Nosek, Brian A and Wagenmakers, E-J and Berk, Richard and Bollen, Kenneth A and Brembs, Bj{\"o}rn and Brown, Lawrence and Camerer, Colin and others},
+  journal={Nature Human Behaviour},
+  volume={2},
+  number={1},
+  pages={6},
+  year={2018},
+  publisher={Nature Publishing Group}
+}
+
+@article{wagenmakers2012agenda,
+  title={An agenda for purely confirmatory research},
+  author={Wagenmakers, Eric-Jan and Wetzels, Ruud and Borsboom, Denny and van der Maas, Han LJ and Kievit, Rogier A},
+  journal={Perspectives on Psychological Science},
+  volume={7},
+  number={6},
+  pages={632--638},
+  year={2012},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{wicherts2016degrees,
+  title={Degrees of freedom in planning, running, analyzing, and reporting psychological studies: A checklist to avoid p-hacking},
+  author={Wicherts, Jelte M and Veldkamp, Coosje LS and Augusteijn, Hilde EM and Bakker, Marjan and Van Aert, Robbie and Van Assen, Marcel ALM},
+  journal={Frontiers in psychology},
+  volume={7},
+  pages={1832},
+  year={2016},
+  publisher={Frontiers}
+}
+
+@article{bakker2011mis,
+  title={The (mis) reporting of statistical results in psychology journals},
+  author={Bakker, Marjan and Wicherts, Jelte M},
+  journal={Behavior research methods},
+  volume={43},
+  number={3},
+  pages={666--678},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{nuijten2016prevalence,
+  title={The prevalence of statistical reporting errors in psychology (1985--2013)},
+  author={Nuijten, Mich{\`e}le B and Hartgerink, Chris HJ and van Assen, Marcel ALM and Epskamp, Sacha and Wicherts, Jelte M},
+  journal={Behavior research methods},
+  volume={48},
+  number={4},
+  pages={1205--1226},
+  year={2016},
+  publisher={Springer}
+}
+
+
+@article{lakens2017too,
+  title={Too true to be bad: When sets of studies with significant and nonsignificant findings are probably true},
+  author={Lakens, Dani{\"e}l and Etz, Alexander J},
+  journal={Social Psychological and Personality Science},
+  volume={8},
+  number={8},
+  pages={875--881},
+  year={2017},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{lakens2015challenges,
+  title={On the challenges of drawing conclusions from p-values just below 0.05},
+  author={Lakens, Dani{\"e}l},
+  journal={PeerJ},
+  volume={3},
+  pages={e1142},
+  year={2015},
+  publisher={PeerJ Inc.}
+}
+
+@article{lakens2019practical,
+  title={The practical alternative to the p-value is the correctly used p-value},
+  author={Lakens, Daniel},
+  year={2019},
+  publisher={PsyArXiv}
+}
+
+@article{scheel2020excess,
+  title={An excess of positive results: Comparing the standard Psychology literature with Registered Reports},
+  author={Scheel, Anne M and Schijen, Mitchell and Lakens, Dani{\"e}l},
+  year={2020},
+  publisher={PsyArXiv}
+}
+
+@article{nosek2018preregistration,
+  title={The preregistration revolution},
+  author={Nosek, Brian A and Ebersole, Charles R and DeHaven, Alexander C and Mellor, David T},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={115},
+  number={11},
+  pages={2600--2606},
+  year={2018},
+  publisher={National Acad Sciences}
+}
+
+@article{peng2009reproducible,
+  title={Reproducible research and biostatistics},
+  author={Peng, Roger D},
+  journal={Biostatistics},
+  volume={10},
+  number={3},
+  pages={405--408},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{patil2019visual,
+  title={A visual tool for defining reproducibility and replicability},
+  author={Patil, Prasad and Peng, Roger D and Leek, Jeffrey T},
+  journal={Nature human behaviour},
+  volume={3},
+  number={7},
+  pages={650--652},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{lebel2019brief,
+  title={A brief guide to evaluate replications},
+  author={LeBel, Etienne Philippe and Vanpaemel, Wolf and Cheung, Irene and Campbell, Lorne},
+  journal={Meta-Psychology},
+  volume={3},
+  year={2019}
+}
