--- a/book.bib
+++ b/book.bib
@@ -42,7 +42,7 @@
 
 
 
-@article{simmons2011false,
+@article{simmons2011,
   title={False-positive psychology: Undisclosed flexibility in data collection and analysis allows presenting anything as significant},
   author={Simmons, Joseph P and Nelson, Leif D and Simonsohn, Uri},
   journal={Psychological science},
@@ -176,21 +176,32 @@
   publisher={Oxford University Press}
 }
 
-@article{patil2019visual,
-  title={A visual tool for defining reproducibility and replicability},
-  author={Patil, Prasad and Peng, Roger D and Leek, Jeffrey T},
-  journal={Nature human behaviour},
-  volume={3},
-  number={7},
-  pages={650--652},
-  year={2019},
-  publisher={Nature Publishing Group}
-}
-
 @article{lebel2019brief,
   title={A brief guide to evaluate replications},
   author={LeBel, Etienne Philippe and Vanpaemel, Wolf and Cheung, Irene and Campbell, Lorne},
   journal={Meta-Psychology},
   volume={3},
   year={2019}
+}
+
+@article{patil2019,
+  title={A visual tool for defining reproducibility and replicability},
+  author={Patil, P., Peng, R.D. & Leek, J.T},
+  journal={Nat Hum Behav},
+  volume={3},
+  pages={650--652},
+  year={2019},
+  url={https://doi.org/10.1038/s41562-019-0629-z}
+}
+
+@Article{tidy-data,
+  author = {Hadley Wickham},
+  issue = {10},
+  journal = {The Journal of Statistical Software},
+  selected = {TRUE},
+  title = {Tidy data},
+  url = {http://www.jstatsoft.org/v59/i10/},
+  volume = {59},
+  year = {2014},
+  bdsk-url-1 = {http://www.jstatsoft.org/v59/i10/},
 }
