--- a/book.bib
+++ b/book.bib
@@ -186,7 +186,7 @@
 
 @article{patil2019,
   title={A visual tool for defining reproducibility and replicability},
-  author={Patil, P., Peng, R.D. & Leek, J.T},
+  author={Patil P., Peng R.D., & Leek J.T},
   journal={Nat Hum Behav},
   volume={3},
   pages={650--652},
